public/styles/index.css
/*
* Make it beautiful 🌈.
*/

:root {
  --dark-gray: #345;
  --light-gray: #89a;
  --purple: #745fb5;
}

body {
  height: 100vh;
  transition: all 0.3s cubic-bezier(0.33, 1, 0.66, 1);
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.glitter {
  color: white;
  background-image: url(../images/glitter.gif);
  background-color: initial;
  filter: hue-rotate(45deg);
  -webkit-background-clip: text !important;
  -webkit-text-fill-color: transparent !important;
  text-decoration: none;
}

.pointer {
  cursor: pointer;
}

.list .fa-lg {
  line-height: 1;
}

.shadow {
  box-shadow: 0 1px 1px rgba(85, 102, 119, 0.2),
    0 1px 3px rgba(85, 102, 119, 0.25);
}

.checkbox-toggle {
  height: 24px;
  width: 24px;
  transition: all 0.3s cubic-bezier(0.33, 1, 0.66, 1);
}

.checkbox-wrapper {
  width: 48px;
  height: 24px;
}

.checkbox:checked + .checkbox-wrapper {
  background-color: #19a974; /* green color */
  border-color: black !important;
}

.checkbox:checked + .checkbox-wrapper .checkbox-toggle {
  left: 24px;
  background-color: white;
}
.checkbox:checked + {
  background: black;
}

.row-item:first-child {
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
}
.row-item:last-child {
  border: none;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}
a[href].row-item:hover {
  background: #f8f8f9 !important;
}
.row-item img {
  object-fit: contain;
}
.project-card:hover {
  transition: all 0.2s ease-in-out;
  box-shadow: 0 1px 1px rgba(85, 102, 119, 0.1),
    0 1px 3px rgba(85, 102, 119, 0.15), 0 4px 8px rgba(85, 102, 119, 0.2);
}
.project-card:hover img {
  transform: scale(1.05);
  background: black;
}
.project-card .image-wrapper {
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  height: 140px;
  overflow: hidden;
}
.project-card img {
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  width: 100%;
  height: 140px;
  object-fit: cover;
  transition: all 0.2s ease-in-out;
}
.project-wrapper {
  width: 100%;
}

@media screen and (min-width: 30em) {
  .project-wrapper {
    width: 50%;
  }
  .project-wrapper {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
  .project-wrapper:nth-child(2n) {
    padding-right: 0;
  }
  .project-wrapper:nth-child(2n + 1) {
    padding-left: 0;
  }
}
@media screen and (min-width: 60em) {
  .project-wrapper {
    width: 33.3%;
  }
  .project-wrapper:nth-child(3n) {
    padding-right: 0;
  }
  .project-wrapper:nth-child(3n + 1) {
    padding-left: 0;
  }
  .project-wrapper {
    padding-left: 0.75rem;
    padding-right: 0.75rem;
  }
}

.dark-gray {
  color: var(--dark-gray) !important;
}
.light-gray {
  color: var(--light-gray) !important;
}
.purple {
  color: var(--purple) !important;
}
.link-reset {
  text-decoration: none;
}

.badge {
  border-radius: 3px;
  padding: 1px 6px;
  font-size: 12px;
  font-weight: 500;
}
.badge-default {
  background: #f4f4f4;
  color: #333333;
}
.badge-blue {
  background: #dcecff;
  color: #00449e;
}
.badge-red {
  background: #ffdfdf;
  color: #e7040f;
}
.badge-orange {
  background: #fff1e9;
  color: #ed5c01;
}
.badge-green {
  background: #e8fdf5;
  color: #137752;
}
.badge-yellow {
  background: #fffceb;
  color: #f4cd00;
}
.badge-purple {
  background: #f5eeff;
  color: var(--purple);
}

